Added file upload functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ elasticsearch.port=9300
 # App config
 server.port=8102
 spring.application.name=BootElastic
+#multipart max size
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
