--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,16 +89,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css",
-              
-
-
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
-            "./node_modules/jquery/dist/jquery.js",
-            "./node_modules/bootstrap/dist/css/bootstrap.js",
-           "src/assets/myjs/loginpage.js"
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/css/bootstrap.js",
+              "src/assets/myjs/loginpage.js"
             ]
           }
         },
