--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.4",
+    "@angular/cdk": "^10.1.0",
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
     "@angular/forms": "~10.0.4",
+    "@angular/material": "^10.1.0",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "@types/jquery": "^3.5.0",
+    "angular-bootstrap-md": "^9.3.1",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "ng-uikit-pro-standard": "^1.0.0",
